[package]
name = "esp-now-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.2", features = ["serde"] }
postcard = { version = "1.1.3", features = ["heapless"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
anyhow = { version = "1.0.100", default-features = false }

